# diffscope

./: .diffscope.yml.example  .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  Dockerfile  FEATURES.md  LICENSE  README.md  RELEASE_NOTES.md  action.yml  docker-compose.yml  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  diffscope.yml  release.yml
docs/: lsp.md
examples/: evalops-fixes.py  security-fixes-template.py
examples/lsp/: cpp.yml  csharp.yml  go.yml  java.yml  kotlin.yml  php.yml  python.yml  ruby.yml  rust.yml  typescript.yml
scripts/: build-all-targets.sh  update_feedback_from_review.sh
src/: config.rs  main.rs
src/adapters/: anthropic.rs  llm.rs  mod.rs  ollama.rs  openai.rs
src/core/: changelog.rs  comment.rs  commit_prompt.rs  context.rs  diff_parser.rs  git.rs  interactive.rs  mod.rs  pr_summary.rs  prompt.rs  smart_review_prompt.rs  symbol_index.rs
src/plugins/: mod.rs  plugin.rs  post_processor.rs  pre_analyzer.rs
src/plugins/builtin/: duplicate_filter.rs  eslint.rs  mod.rs  semgrep.rs
