[package]
name = "diffscope"
version = "0.4.3"
edition = "2021"
authors = ["Jonathan Haas <jonathan@haas.holdings>"]
description = "A composable code review engine with smart analysis, confidence scoring, and professional reporting"
license = "Apache-2.0"
repository = "https://github.com/Haasonsaas/diffscope"
keywords = ["code-review", "diff", "analysis", "cli", "security"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
similar = "2.4"
git2 = "0.18"
once_cell = "1.19"
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"

[[bin]]
name = "diffscope"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
